# topocore_py

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: homework-03-28.qmd  homework-04-11.qmd  pres.qmd
examples/: simplicial_complex_a.py  simplicial_complex_b.py
requirements/: environment.yml
tests/: persistence_diagram.py  test_persistence_diagram.py  test_simplicial_complex.py
topocore/: __init__.py  filtration.py  linalg.py  persistence.py  simplicial_complex.py  topocore.py
topocore/examples/: filtration.py  simplicial_complex_b.py  template.pptx
topocore/examples/data/: CDHWdata_1.csv  CDHWdata_2.csv  CDHWdata_3.csv  CDHWdata_4.csv  CDHWdata_5.csv
